test/typechecker.d/invalid/ass1.souc.bad
n = 5

f(x: Integer): Integer = do
	b: Char <- True
	if b
		return x
	else
		return n
